--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -20,15 +22,55 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React Fitness Club</title>
-</head>
+    <title>React Fitness Club</title>
+    <meta
+      name="description"
+      content="React Fitness Club is a multi-style martial arts and fitness club. Each of our programs aims to support the path to individual physical and mental success as a human being. Through martial arts and team-based fitness training and activities, we provide resources and coach our students to improve their strength, endurance, and mobility, as well as cultivate positive mental habits in all areas of life."
+    />
 
-<body>
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"></div>
-  <!--
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="React Fitness Club" />
+    <meta
+      itemprop="description"
+      content="React Fitness Club is a multi-style martial arts and fitness club. Each of our programs aims to support the path to individual physical and mental success as a human being. Through martial arts and team-based fitness training and activities, we provide resources and coach our students to improve their strength, endurance, and mobility, as well as cultivate positive mental habits in all areas of life."
+    />
+    <meta
+      itemprop="image"
+      content="https://s3.amazonaws.com/react-fitness-club/react-fitness-club-logo.png"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.reactfitnessclub.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="React Fitness Club" />
+    <meta
+      property="og:description"
+      content="React Fitness Club is a multi-style martial arts and fitness club. Each of our programs aims to support the path to individual physical and mental success as a human being. Through martial arts and team-based fitness training and activities, we provide resources and coach our students to improve their strength, endurance, and mobility, as well as cultivate positive mental habits in all areas of life."
+    />
+    <meta
+      property="og:image"
+      content="https://s3.amazonaws.com/react-fitness-club/react-fitness-club-logo.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="React Fitness Club" />
+    <meta
+      name="twitter:description"
+      content="React Fitness Club is a multi-style martial arts and fitness club. Each of our programs aims to support the path to individual physical and mental success as a human being. Through martial arts and team-based fitness training and activities, we provide resources and coach our students to improve their strength, endurance, and mobility, as well as cultivate positive mental habits in all areas of life."
+    />
+    <meta
+      name="twitter:image"
+      content="https://s3.amazonaws.com/react-fitness-club/react-fitness-club-logo.png"
+    />
+  </head>
+
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,6 +80,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
