--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-143859674-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143859674-1');
+    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -22,10 +36,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Fitness Club</title>
+    <title>
+      Worcester Martial Arts Training & Fitness Club | React Fitness Club
+    </title>
     <meta
       name="description"
-      content="React Fitness Club is a multi-style martial arts and fitness club. Each of our programs aims to support the path to individual physical and mental success as a human being. Through martial arts and team-based fitness training and activities, we provide resources and coach our students to improve their strength, endurance, and mobility, as well as cultivate positive mental habits in all areas of life."
+      content="React Fitness Club is a multi-style martial arts and fitness club. Our programs support the path to individual physical and mental success as a human being."
     />
 
     <!-- Google / Search Engine Tags -->
