--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 
       gtag('config', 'UA-143859674-1');
     </script>
+
+    <!-- <script type="text/javascript" src="https://stats.egumball.com/?key=2xmjam24ab4eb6gcdr4wszs8" /> -->
+
     <meta charset="utf-8" />
     <meta
       name="viewport"
